--- a/Develop/package.json
+++ b/Develop/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "path": "^0.12.7",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "uuidv1": "^1.6.14"
   }
 }
