--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,18 +1,19 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "## Description",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/codyalmand/Note-Taker.git"
+  },
+  "author": "codyalmand",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "path": "^0.12.7",
-    "require": "^2.4.20",
-    "uuidv1": "^1.6.14"
-  }
+  "bugs": {
+    "url": "https://github.com/codyalmand/Note-Taker/issues"
+  },
+  "homepage": "https://github.com/codyalmand/Note-Taker#readme"
 }
