--- a/Develop/package.json
+++ b/Develop/package.json
@@ -2,10 +2,10 @@
   "name": "note-taker",
   "version": "1.0.0",
   "description": "## Description",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "node server.js"
+ },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/codyalmand/Note-Taker.git"
