--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,19 +1,35 @@
 {
-  "name": "note-taker",
+  "name": "develop",
   "version": "1.0.0",
-  "description": "## Description",
+  "description": "Note-Taker",
   "main": "server.js",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
+    "require": "^2.4.20",
+    "uuidv1": "^1.6.14"
+  },
+  "devDependencies": {},
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
- },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/codyalmand/Note-Taker.git"
   },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
   "author": "codyalmand",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/codyalmand/Note-Taker/issues"
   },
-  "homepage": "https://github.com/codyalmand/Note-Taker#readme"
+  "homepage": "https://github.com/codyalmand/Note-Taker#readme",
+  "engines": {
+  "node": "12.18.3"
+  }
 }
